# functionary

./: functionary.code-workspace
.github/workflows/: linters.yml
cli/: README.md  build.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
cli/functionary/: client.py  login.py  package.py  utils.py
cli/src/: main.py
cli/src/functionary/: __main__.py  client.py  config.py  login.py  package.py  tokens.py  utils.py
cli/tests/: conftest.py  test_config.py  test_environment.py  test_login.py  test_package.py  test_utils.py
docker/: build.sh  dev.Dockerfile  dev_docker.Dockerfile  docker-compose.yml  functionary.Dockerfile  runner.Dockerfile  simple_build.sh  source.Dockerfile
docs/: README.md  VSCODE.md  build.sh  devserver.sh  mkdocs.yml  requirements.txt
docs/docs/: index.md
examples/calculator/: package.yaml
examples/demo/: functions.py  package.yaml  requirements.txt
examples/js_calculator/: functions.js  package.yaml
functionary/: README.md  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.sh
functionary/.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
functionary/builder/: apps.py  celery.py  utils.py
functionary/core/: apps.py  celery.py
functionary/functionary/: urls.py  wsgi.py
functionary/ui/: urls.py
package_templates/: build.sh  javascript.Dockerfile  python.Dockerfile
package_templates/javascript/: functions.js  main.js
runner/: pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
(+347 files in other folders)
